# Kidney-Disease-Classification-Deep-Learning-Project

./: CMakeLists.txt  README.md  setup.py  template.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
research/: trials.ipynb
src/cnnClassifier.egg-info/: PKG-INFO
