# Set the minimum required CMake version
cmake_minimum_required(VERSION 3.10)

# Define the project name
project(cnnClassifier)

# Add source files or other project-specific configurations here
# Uncomment and modify the following line if you have a main source file
# add_executable(${PROJECT_NAME} src/main.cpp)
